force-app/main/default/objects/Map_Area__c/Map_Area__c.object-meta.xml
<CustomObject>

    <label>Map Area</label>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Map Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>