force-app/main/default/objects/Map_Area__c/fields/Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Area_Type__c</fullName>
    <label>Area Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Point</fullName>
            </value>
            <value>
                <fullName>Polyline</fullName>
            </value>
            <value>
                <fullName>Polygon</fullName>
            </value>
            <value>
                <fullName>Rectangle</fullName>
            </value>
            <value>
                <fullName>Circle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>