force-app/main/default/objects/Map_Area__c/fields/Geometry_JSON__c.field-meta.xml
<CustomField>
    <fullName>Geometry_JSON__c</fullName>
    <label>Geometry JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>