force-app/main/default/objects/Map_Area__c/fields/Is_Synchronized__c.field-meta.xml
<CustomField>
    <fullName>Is_Synchronized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indique si cette zone a été synchronisée vers un objet parent (adresse, latitude, longitude)</description>
    <label>Synchronisée</label>
    <type>Checkbox</type>
</CustomField>