force-app/main/default/objects/Map_Area__c/listViews/Recently_Viewed.listView-meta.xml
<ListView>
    <fullName>Recently_Viewed</fullName>
    <filterScope>Everything</filterScope>
    <label>Recently Viewed</label>
    
    <!-- Colonnes personnalisées dans l'ordre demandé -->
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>Latitude__c</columns>
    <columns>Longitude__c</columns>
</ListView>